[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexorian-sdk"
version = "1.0.0"
authors = [
  { name="Nexorian Core Team", email="security@nexorian.org" },
]
description = "Nexorian Deterministic Governance SDK & Operational Kernel"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
]

[project.urls]
"Homepage" = "https://nexorian.org"
"Bug Tracker" = "https://github.com/timeismoneyinc2019-crypto/Nexorian-SDK/issues"

[tool.setuptools.packages.find]
where = ["python"]
include = ["nexorian*"]
